--- a/myapp/src/components/HomeContainer.css
+++ b/myapp/src/components/HomeContainer.css
@@ -1,3 +1,8 @@
+.HomeContainer{
+    background-color: #f1c111 !important;;
+}
+
+
 .container {
     text-align: center;
     position: absolute;
@@ -5,6 +10,7 @@
     right: 0;
     top: 0;
     transform: translateY(-50%);
+
     
 }
  
@@ -13,6 +19,7 @@
     line-height: 26px;
     color: #212f55;
     font-family: Avenir !important;
+    
 }
  
 .container p {
@@ -21,6 +28,7 @@
     color: #8c8c8c;
     margin: 0;
     font-family: Avenir !important;
+    
 }
  
 .container a {
