--- a/myapp/src/components/Start.css
+++ b/myapp/src/components/Start.css
@@ -1,8 +1,10 @@
+
+
 .container h2 {
     font-size: 40px;
     line-height: 42px;
     color: #212f55;
-    font-family: Avenir !important;
+    font-family: Avenir,sans-serif !important;
     text-align: left;
     margin: 10px;
 }
@@ -28,12 +30,38 @@ ion-img#img-hs::part(image) {
     width: 80px;
 }
 
-.Wolke1{
-    margin-left:70% ;  
+@keyframes move{
+    from{
+        transform:translateX(-250%)
+    }
+    to{
+        transform: translateX(100%);
+    }
 }
 
+.Wolke1{
+    margin-left:70% ; 
+    animation-name: move;
+    animation-iteration-count: infinite;
+    animation-duration: 15s;
+    animation-direction: normal;
+    animation-timing-function: ease;
+}
+
+@keyframes leave{
+    from{
+        transform:translateX(-90%)
+    }
+    to{
+        transform: translateX(200%);
+    }
+}
 
 .Wolke2{
     margin-top: 0%;
     width: 200px !important;
+    animation-name: leave ;
+    animation-iteration-count: infinite;
+    animation-duration: 15s;
+    animation-direction:normal;
 }
